# todo_app

./: README.md  main.py  makefile  pyproject.toml  pytest.ini
tests/: test_todo_app.py
todo_app/: config.py  orm.py  repository.py  schemas.py  services.py  uow.py
todo_app/domain/: events.py
